--- a/Task9/index.html
+++ b/Task9/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <title>Tic Tac Toe</title>
 </head>
+
 <body>
   <div class="container">
     <h1 id="playText">Let's play!</h1>
@@ -22,8 +24,9 @@
       <div class="cell" id="7"></div>
       <div class="cell" id="8"></div>
     </div>
-    <button id="restartBtn">Restart?</button>
+    <button class="new-game">New game!</button>
   </div>
   <script src="./js/main.js"></script>
 </body>
+
 </html>
