--- a/Task10/index.html
+++ b/Task10/index.html
@@ -5,23 +5,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Task №10 'Events'</title>
 </head>
 
 <body>
   <table id="table">
     <thead>
       <tr>
-        <th onclick="sortTable(0)">Nummer</th>
-        <th onclick="sortTable(1)">Land</th>
-        <th onclick="sortTable(2)">Name</th>
+        <th data-type="number">Id</th>
+        <th data-type="string">Name</th>
+        <th data-type="number">Age</th>
       </tr>
     </thead>
-    <tbody>
+
+    <tbody id="tableData">
 
     </tbody>
   </table>
-  
+
   <script src="./js/script.js"></script>
 </body>
 
