--- a/Task12/index.html
+++ b/Task12/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Task №12 'Network interaction'</title>
 </head>
+
 <body>
+  <div class="form__container">
+    <form class="form">
+      <select class="select-category">
+        <option>Choose a category</option>
+      </select>
+    </form>
+  </div>
+  <div class="output"></div>
   <script src="./js/script.js"></script>
 </body>
+
 </html>
