--- a/Task12/index.html
+++ b/Task12/index.html
@@ -12,13 +12,18 @@
 </head>
 
 <body>
-  <div class="form__container">
-    <form class="form">
-      <select class="select-category">
-        <option>Choose a category</option>
-      </select>
-    </form>
-  </div>
+  <form class="form">
+    <p class="category">Category:</p>
+    <select class="select-category">
+      <option>Choose a category</option>
+    </select>
+  </form>
+  <form class="form">
+    <p class="title">Title:</p>
+    <select class="select-title">
+      <option>Choose a title</option>
+    </select>
+  </form>
   <div class="output"></div>
   <script src="./js/script.js"></script>
 </body>
