--- a/Task14/index.html
+++ b/Task14/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Task №13 'Modern js'</title>
+  <title>Task №14 'Module principle'</title>
 </head>
 
 <body>
