--- a/Task15/index.html
+++ b/Task15/index.html
@@ -8,10 +8,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Task №14 'Module principle'</title>
+  <title>Task №14 'User data manipulation'</title>
 </head>
 
-<body>
+<body class="light-theme">
+  <button class="theme-button" type="button">Изменить тему</button>
+  <input id="area" placeholder="Напишите сообщение здесь"></input>
+  <button class="login"></button>
+  <p class="hello"></p>
+
   <form class="form">
     <p>Category:</p>
     <select class="select-category">
@@ -25,7 +30,7 @@
     </select>
   </form>
   <div class="output"></div>
-  <script src="./dist/bundle.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
